# nuchessdb

./: .gitignore  CLAUDE.md  PLAN.md  Plan.md  README.md  Rules.md  chess.db  chesscomextract.nu  coach-one.nu  coach-profile.nu  corpus.msgpack  derive-coach.nu  dictionary-update.nu  main.nu  nuchessdb  nuchessdb.nu  nuchessdb2.nu  nupm.nuon  plan.md  smoke-test.nu  test_bulk.nu  test_bulk2.nu  test_critter_parity.nu  test_phase2.nu  test_phase3.nu  test_plugin_commands.nu  test_pragma.nu  test_quickstart_pipeline.nu  test_readme_commands.nu  test_removed_commands.nu  test_reports_phase1.nu  test_reports_phase2.nu  test_reports_phase3.nu  test_reports_phase4.nu  test_sync_state.nu  validate-gate.nu
ai/: mod.nu
chessdb/: db.nu  derive.nu  mod.nu  profile.nu  sync.nu
config/: nuchessdb.nuon
data/: eco.json  eco_commentary.json
docs/: COACHING.md  COACH_PIPELINE.md  query-primer.md
modules/: annotate.nu  (+14 more)
nu_plugin_chessdb/: Cargo.toml  NNUE_AUDIT.md  PLAN.md  nnue.md
nu_plugin_chessdb/src/: apply_san.rs  apply_uci.rs  attack_summary.rs  checker_summary.rs  chess.rs  coach_derive_cmd.rs  core.rs  critter_eval_cmd.rs  dataset_builder_cmd.rs  encode_fen_cmd.rs  fen_info.rs  hugm_eval_cmd.rs  is_legal.rs  legal_moves.rs  lib.rs  main.rs  mobility.rs  nnue_eval_cmd.rs  normalize_fen.rs  pgn_to_fens.rs  position_encoder.rs  process_corpus.rs  san_to_uci.rs  uci_to_san.rs  utils.rs  zobrist.rs
nu_plugin_chessdb/src/eval/: concept_types.rs  concepts.rs  mod.rs  position.rs  sensor.rs  threat_graph.rs
nu_plugin_chessdb/tests/: ingest_pipeline.rs  motif_canonical.rs
(+13 files in other folders)
