[package]
name = "nu_plugin_chessdb"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nu_plugin_chessdb"
path = "src/main.rs"

[dependencies]
nu-plugin = "0.111"
nu-protocol = "0.111"

shakmaty = "0.26"
pgn-reader = "0.24"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
once_cell = "1"
csv = "1"
chrono = "0.4"
ndarray = "0.14"
ndarray-npy = "0.7"
bulletformat = { git = "https://github.com/jw1912/bulletformat" }
